# powerexample

./: .gitignore  CMakeLists.txt  README.md
DevWorkbench/: CMakeLists.txt  DevGlobal.h  DevWorkbench.cpp  DevWorkbench.h  __Loader.cpp
DevWorkbench/Base/: DevSetup.cpp  DevSetup.h  PartCollection.cpp  PartCollection.h  Utils.hpp
DevWorkbench/Base/Navigator/: PartNavigator.cpp  PartNavigator.h  ShapeTree.cpp  ShapeTree.h
DevWorkbench/Base/Object/: BoxObject.cpp  BoxObject.h  CurvesLoftObject.cpp  CurvesLoftObject.h  DevObject.cpp  DevObject.h  RenderDistanceObject.cpp  RenderDistanceObject.h
DevWorkbench/Base/ViewProvider/: ViewProviderBox.cpp  ViewProviderBox.h  ViewProviderCurvesLoft.cpp  ViewProviderCurvesLoft.h  ViewProviderRenderDistance.cpp  ViewProviderRenderDistance.h
DevWorkbench/Command/: CommandDev.cpp  CommandDev.h
DevWorkbench/Gui/: BoxDialog.cpp  BoxDialog.h  BoxDialog.ui  CurvesLoftDialog.cpp  CurvesLoftDialog.h  CurvesLoftDialog.ui  RenderDistanceDialog.cpp  RenderDistanceDialog.h  RenderDistanceDialog.ui
DevWorkbench/Resources/: Resource.qrc  icon.qrc
DevWorkbench/Resources/lang/: lang_en.qm  lang_en.ts  lang_zh_CN.qm  lang_zh_CN.ts  powercam.qph
DevWorkbench/Resources/py/: README.md
DevWorkbench/Resources/theme/: application-theme1.qss  ribbonbar-theme1.qss  tree-theme.qss
DevWorkbench/Resources/tip/: GUIDialogDefultValue.json
DevWorkbench/Resources/view_cube/: X+Y+.stl  X+Y+Z+.stl  X+Y+Z-.stl  X+Y-.stl  X+Y-Z+.stl  X+Y-Z-.stl  X+Z+.stl  X+Z-.stl  X-Y+.stl  X-Y+Z+.stl  X-Y+Z-.stl  X-Y-.stl  X-Y-Z+.stl  X-Y-Z-.stl  X-Z+.stl  X-Z-.stl  (+4 more)
(+1053 files in other folders)
